Fix picture viewer size overflow

--- a/MediaCloud/wwwroot/css/site.css
+++ b/MediaCloud/wwwroot/css/site.css
@@ -364,7 +364,7 @@ body {
 .picture-viewer {
     object-fit: contain; 
     height: 80vh;
-    max-width: 90vw;
+    max-width: 85vw;
     animation-iteration-count: 1;
 }
 
